# linux-dev-envs

./: README.md
CppCodes/.devcontainer/: devcontainer.json
CppCodes/C-Project/: CMakeLists.txt  Makefile
CppCodes/C-Project/src/: main.c
CppCodes/CPP-Project/: .clang-format  CMakeLists.txt  Makefile
CppCodes/CPP-Project/src/: test.cpp
CppCodes/CPP-SingleFiles/: CMakeLists.txt  Makefile
CppCodes/CPP-SingleFiles/src/: a.cpp  b.cpp
CppCodes/test/: CMakeLists.txt  Makefile
Dockerfiles/cpp-dev/: Dockerfile
Dockerfiles/pytorch-dev/: Dockerfile
PythonCodes/.devcontainer/: devcontainer.json
PythonCodes/test/: test.ipynb
